--- a/android/build.gradle
+++ b/android/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 
     // Pose detection with accurate models
     implementation 'com.google.mlkit:pose-detection-accurate:18.0.0-beta2'
-
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
     // Selfie segmentation
     implementation 'com.google.mlkit:segmentation-selfie:16.0.0-beta4'
 
