--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,17 +44,18 @@ android {
         minSdkVersion 21
     }
 }
+var camerax_version = "1.0.2"
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Pose detection with accurate models
-    implementation 'com.google.mlkit:pose-detection-accurate:18.0.0-beta2'
+    implementation "com.google.mlkit:pose-detection-accurate:18.0.0-beta2"
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
     // Selfie segmentation
-    implementation 'com.google.mlkit:segmentation-selfie:16.0.0-beta4'
+    implementation "com.google.mlkit:segmentation-selfie:16.0.0-beta4"
 
-    implementation 'androidx.camera:camera-core:1.0.2'
-    implementation 'androidx.camera:camera-lifecycle:1.0.2'
-    implementation "androidx.camera:camera-camera2:1.0.2"
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
 }
