--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,7 +44,6 @@ android {
         minSdkVersion 21
     }
 }
-var camerax_version = "1.2.0-alpha01"
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -55,7 +54,7 @@ dependencies {
     // Selfie segmentation
     implementation "com.google.mlkit:segmentation-selfie:16.0.0-beta4"
 
-    implementation "androidx.camera:camera-core:$camerax_version"
-    implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-core:1.2.0-alpha01"
+    implementation "androidx.camera:camera-lifecycle:1.2.0-alpha01"
+    implementation "androidx.camera:camera-camera2:1.2.0-alpha01"
 }
